--- a/30-days-of-CSS/14 - Sticky Header/student.html
+++ b/30-days-of-CSS/14 - Sticky Header/student.html
@@ -1,56 +1,76 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Sticky Footer | Code 30 Things in 30 Days with CSS3</title>
 
-    <!-- NORMALIZE CSS -->
-    <link rel="stylesheet" href="../_theme-styles/normalize.css">
+<head>
+  <meta charset="utf-8">
+  <title>Sticky Footer | Code 30 Things in 30 Days with CSS3</title>
 
-    <!-- PROJECT THEME CSS -->
-    <link rel="stylesheet" href="../_theme-styles/theme.css">
+  <!-- NORMALIZE CSS -->
+  <link rel="stylesheet" href="../_theme-styles/normalize.css">
 
-    <!-- SANDBOX CSS (this is your file!) -->
-    <link rel="stylesheet" href="sandbox.css">
+  <!-- PROJECT THEME CSS -->
+  <link rel="stylesheet" href="../_theme-styles/theme.css">
 
-<link href="https://fonts.googleapis.com/css?family=Bubblegum+Sans|Nova+Mono|Roboto+Condensed" rel="stylesheet">
-  </head>
-  <body class="sticky-header-lesson">
+  <!-- SANDBOX CSS (this is your file!) -->
+  <link rel="stylesheet" href="sandbox.css">
 
-      <div class="sticky-header">
-        <h1><small>Day #14</small> Sticky Header <small>Student Version</small></h1>
-      </div>
+  <link href="https://fonts.googleapis.com/css?family=Bubblegum+Sans|Nova+Mono|Roboto+Condensed" rel="stylesheet">
+</head>
 
-      <div class="sandbox">
-        <h2>Sandbox <small>This is where you play</small></h2>
-        <div class="content">
+<body class="sticky-header-lesson">
 
-          <a href="student.html" class="button-theme"><small>Click here to</small>View the student version</a><br>
-          <a href="index.html" class="button-theme"><small>Click here to</small>View the info page</a>
+  <header class="sticky-header">
+    <h1><small>Day #14</small> Sticky Header <small>Student Version</small></h1>
+  </header>
 
-          <h3>Just some dummy copy to make the page long</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <div class="sandbox">
+    <h2>Sandbox <small>This is where you play</small></h2>
+    <div class="content">
 
-        </div>
-      </div>
+      <a href="student.html" class="button-theme"><small>Click here to</small>View the student version</a><br>
+      <a href="index.html" class="button-theme"><small>Click here to</small>View the info page</a>
 
-      <footer>
-        <div class="logo">
-          <a href="http://codecollege.ca/" id="logo"><img src="../_theme-styles/img/codecollegelogo.png" alt="Learn to Code at CodeCollege.ca" height="60px"></a>
-        </div>
-        <div class="made-by">
-          Made by <a href="http://bradhussey.ca/">Brad Hussey</a>
-        </div>
-        <div class="course">
-          <a href="http://codecollege.ca/">Code 30 things in 30 days with CSS3</a>
-        </div>
-        <div class="copyright">
-          &copy;2018 Brightside Studios Inc.
-        </div>
-      </footer>
+      <h3>Just some dummy copy to make the page long</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+        laborum.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+        laborum.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+        laborum.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+        laborum.</p>
 
-  </body>
+    </div>
+  </div>
+
+  <footer>
+    <div class="logo">
+      <a href="http://codecollege.ca/" id="logo"><img src="../_theme-styles/img/codecollegelogo.png"
+          alt="Learn to Code at CodeCollege.ca" height="60px"></a>
+    </div>
+    <div class="made-by">
+      Made by <a href="http://bradhussey.ca/">Brad Hussey</a>
+    </div>
+    <div class="course">
+      <a href="http://codecollege.ca/">Code 30 things in 30 days with CSS3</a>
+    </div>
+    <div class="copyright">
+      &copy;2018 Brightside Studios Inc.
+    </div>
+  </footer>
+
+</body>
+
 </html>
